--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "new",
+  "name": "skokov",
   "private": true,
   "scripts": {
     "build": "set NODE_ENV=production&&npm run dest&&npm run webpack",
