--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "skokov",
   "private": true,
+  "description":"Корпоративный сайт",
   "scripts": {
     "build": "set NODE_ENV=production&&npm run dest&&npm run webpack",
     "start": "parallelshell \"npm run gulp\" \"npm run webpack\"",
